@@ -11,6 +11,7 @@
 #                                                                                          #
 ############################################################################################
 
+[133] --> Fix loot Freya and Trial of Champion.
 [132] --> Fix Sindragosa.
 [131] --> Fix Instance Cooldown Exploit.
 [130] --> Revert 'Misc fixes (TEST)...'.
